--- a/app/globals.css
+++ b/app/globals.css
@@ -6,6 +6,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: inherit
 }
 
 body {
@@ -23,7 +24,6 @@ h2 {
 h3 {
   padding-bottom: 0.8rem;
 }
-
 
 .nav {
   @apply flex justify-center gap-4 flex-wrap pt-5 pb-3;
