--- a/app/globals.css
+++ b/app/globals.css
@@ -6,15 +6,11 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: inherit
+  font-family: inherit;
 }
 
 body {
   background-color: #d3d3d3;
-}
-
-ul {
-  list-style: none;
 }
 
 h2 {
@@ -25,57 +21,8 @@ h3 {
   padding-bottom: 0.8rem;
 }
 
-.nav {
-  @apply flex justify-center gap-4 flex-wrap pt-5 pb-3;
-}
-
-.page {
-  height: 100vh;
-  padding: 3rem 1.5rem;
-  margin: auto;
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  @apply md:w-1/2;
-}
-
-.list {
-  @apply w-full flex flex-col gap-10;
-}
-
-.card {
-  @apply bg-gray-100 py-4 px-8 rounded-sm shadow-sm flex flex-col gap-2;
-}
-
-.link {
-  @apply bg-gray-100 text-black px-4 py-2 rounded-sm cursor-pointer;
-}
-
-.link:hover {
-  @apply bg-gray-200;
-}
-
-button {
-  border: none;
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-  color: #ffffff;
-  padding: 0.5rem 1rem;
-  border-radius: 4px;
-  cursor: pointer;
-  width: fit-content;
-  background-color: rgb(37 99 235);
-}
-
-.delete_button {
-  @apply bg-red-600;
-}
-
-.finish_button {
-  @apply bg-green-600;
-}
-
-.delete_icon {
-  @apply fill-red-600 cursor-pointer;
+ul {
+  list-style: none;
 }
 
 input {
@@ -84,4 +31,48 @@ input {
 
 label {
   @apply flex items-center justify-between gap-2 w-full;
+}
+
+button {
+  @apply border-none shadow-sm text-white py-2 px-4 rounded cursor-pointer w-fit bg-blue-600;
+}
+
+.nav {
+  @apply flex justify-center gap-4 flex-wrap pt-5 pb-3;
+}
+
+.link {
+  @apply bg-gray-100 text-black px-4 py-2 rounded-sm cursor-pointer hover:bg-gray-200;
+}
+
+.page {
+  @apply min-h-screen pt-12 px-6 pb-32 m-auto flex flex-col items-center md:w-1/2;
+}
+
+.list {
+  @apply w-full flex flex-col gap-10 pb-10;
+}
+
+.card {
+  @apply bg-gray-100 py-4 px-8 rounded-sm shadow-sm flex flex-col gap-2 w-full;
+}
+
+.form {
+  @apply flex flex-col items-center gap-2 w-fit pt-10;
+}
+
+.form button {
+  @apply self-end;
+}
+
+.finish_button {
+  @apply bg-green-600;
+}
+
+.delete_button {
+  @apply bg-red-600;
+}
+
+.delete_icon {
+  @apply fill-red-600 cursor-pointer;
 }
