--- a/app/globals.css
+++ b/app/globals.css
@@ -29,8 +29,13 @@ ul {
 }
 
 input {
-  @apply border border-gray-300 rounded px-3 py-2;
+  @apply border-0 rounded px-3 py-2;
 }
+
+select {
+  @apply border-0 rounded px-2 py-2 w-full;
+}
+
 
 label {
   @apply flex items-center justify-between gap-2 w-full;
