--- a/app/globals.css
+++ b/app/globals.css
@@ -71,7 +71,7 @@ button {
 }
 
 .link {
-  @apply underline bg-gray-100 text-black px-4 py-2 rounded-sm cursor-pointer hover:bg-gray-200;
+  @apply bg-gray-50 text-black px-4 py-2 rounded-sm cursor-pointer hover:bg-gray-100;
 }
 
 .page {
@@ -101,9 +101,9 @@ button {
 .main_button {
   background-image: linear-gradient(
     to right,
-    #06279c 0%,
-    #0c5fb3 51%,
-    #06279c 100%
+    #1138c4 0%,
+    #1a70c7 51%,
+    #1138c4 100%
   );
 }
 
@@ -111,7 +111,7 @@ button {
   background-image: linear-gradient(
     to right,
     #338805 0%,
-    #4db313 51%,
+    #49aa11 51%,
     #338805 100%
   );
 }
@@ -143,3 +143,22 @@ button {
   @apply fill-blue-600;
 }
 
+.live_bg {
+  min-height: 160%;
+  top: -30%;
+  min-width: 1%;
+  transform: rotate(-45deg);
+  position: absolute;
+  animation: ufo 9s infinite ease-out;
+  box-shadow: 10px 10px 10px rgba(255, 255, 255, 0.507), 2px 2px 2px rgba(0, 0, 0, 0.247);
+}
+
+@keyframes ufo {
+  0% {
+    margin-left: -30%;
+
+  }
+  100% {
+    margin-left: 1000%;
+  }
+}
