--- a/app/globals.css
+++ b/app/globals.css
@@ -149,11 +149,11 @@ button {
   min-width: 1%;
   transform: rotate(-45deg);
   position: absolute;
-  animation: ufo 9s infinite ease-out;
-  box-shadow: 10px 10px 10px rgba(255, 255, 255, 0.507), 2px 2px 2px rgba(0, 0, 0, 0.247);
+  animation: flicker 9s infinite ease-out;
+  box-shadow: 10px 10px 10px rgba(255, 255, 255, 0.842);
 }
 
-@keyframes ufo {
+@keyframes flicker {
   0% {
     margin-left: -30%;
 
